Fixed the lulu math me command, since iGoogle no longer works.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "soupselect": ">= 0.2.0",
     "htmlparser": ">= 1.7.6",
     "jsdom": ">= 0.2.14",
-    "xml2js": ">= 0"
+    "xml2js": ">= 0",
+    "ntwitter": ">= 0.5.0", //required by the hubot-scripts
+    "mathjs": ">= 1.5.0", //for 'lulu math me ...'
   },
 
   "engines": {
