--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "hubot-scripts": "git://github.com/github/hubot-scripts.git#master",
     "hubot-tell": "*",
     "hubot": ">=2.5.1",
+    "htmlparser": "1.7.6",
     "jsdom": ">= 0.2.14",
-    "mathjs": ">= 1.5.0", //for 'lulu math me ...'
-    "ntwitter": ">= 0.5.0", //required by the hubot-scripts
+    "mathjs": ">= 1.5.0",
+    "ntwitter": ">= 0.5.0",
     "optparse": "1.0.3",
     "soupselect": ">= 0.2.0",
     "xml2js": ">= 0",
