--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ntwitter": ">= 0.5.0",
     "optparse": "1.0.3",
     "soupselect": ">= 0.2.0",
-    "xml2js": ">= 0",
+    "xml2js": ">= 0"
   },
 
   "engines": {
