--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ntwitter": ">= 0.5.0",
     "optparse": ">= 1.0.3",
     "qs": "~2.3.3",
+    "redis": "= 0.8.4",
     "soupselect": ">= 0.2.0",
     "xml2js": ">= 0"
   },
