--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hubot-scripts": "git://github.com/github/hubot-scripts.git#master",
     "hubot-shipit": "^0.2.0",
     "hubot-tell": "*",
+    "hubot-youtube": ">=1.0.1",
     "jsdom": "< 4.0.0",
     "mathjs": ">= 1.5.0",
     "ntwitter": ">= 0.5.0",
