--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "htmlparser": ">= 1.7.6",
     "hubot": ">= 2.5.1",
+    "hubot-coin": ">= 0.0.2",
     "hubot-google-translate": ">= 0.2.0",
     "hubot-irc": ">= 0.1.9",
     "hubot-redis-brain": ">= 0",
     "hubot-scripts": "git://github.com/github/hubot-scripts.git#master",
     "hubot-shipit": "^0.2.0",
     "hubot-tell": "*",
+    "hubot-xkcd": ">= 0.0.3",
     "hubot-youtube": ">=1.0.1",
     "jsdom": "< 4.0.0",
     "mathjs": ">= 1.5.0",
