--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
   },
   "dependencies": {
     "htmlparser": ">= 1.7.6",
-    "hubot": ">= 2",
+    "hubot": ">= 2.0",
     "hubot-coin": ">= 0.0.2",
     "hubot-dnsimple": "= 0.0.3",
     "hubot-google-translate": ">= 0.2.0",
     "hubot-irc": ">= 0.1.9",
-    "hubot-redis-brain": ">= 0",
-    "hubot-scripts-stock": "*",
+    "hubot-redis-brain": ">= 0.0.3",
+    "hubot-scripts-stock": ">= 0.2.0",
     "hubot-self-uptime": ">= 0.0.3",
-    "hubot-shipit": "^0.2.0",
-    "hubot-tell": "*",
+    "hubot-shipit": ">= 0.2.0",
+    "hubot-tell": ">= 1.2",
     "hubot-xkcd": ">= 0.0.3",
     "hubot-youtube": ">=1.0.1",
     "jsdom": ">= 4.0.0",
     "mathjs": ">= 1.5.0",
     "ntwitter": ">= 0.5.0",
     "optparse": ">= 1.0.3",
-    "qs": "~2.3.3",
+    "qs": ">= 2.3.3",
     "redis": "= 0.8.4",
     "soupselect": ">= 0.2.0",
     "xml2js": ">= 0"
