--- a/package.json
+++ b/package.json
@@ -15,26 +15,25 @@
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
-    "htmlparser": "~1.7.7",
-    "hubot": "~2.19.0",
-    "hubot-coin": "~0.0.2",
-    "hubot-google-translate": "~0.2.0",
-    "hubot-irc": "~0.2.9",
-    "hubot-redis-brain": "~0.0.3",
-    "hubot-scripts-stock": "~0.2.1",
-    "hubot-self-uptime": "~0.0.3",
-    "hubot-shipit": "~0.2.0",
-    "hubot-tell": "~1.2.4",
-    "hubot-xkcd": "~0.0.3",
-    "hubot-youtube": ">=1.0.2",
-    "jsdom": "~9.8.3",
-    "mathjs": "~3.6.0",
-    "ntwitter": "~0.5.0",
-    "optparse": "~1.0.5",
-    "qs": "~6.3.0",
-    "redis": "~2.6.2",
-    "soupselect": "~0.2.0",
-    "xml2js": "~0.4.17"
+    "htmlparser": "^1.7.7",
+    "hubot": "^2.19.0",
+    "hubot-coin": "0.0.2",
+    "hubot-google-translate": "^0.2.1",
+    "hubot-irc": "^0.2.9",
+    "hubot-redis-brain": "0.0.4",
+    "hubot-scripts-stock": "^0.2.1",
+    "hubot-self-uptime": "0.0.3",
+    "hubot-shipit": "^0.2.1",
+    "hubot-tell": "^1.2.4",
+    "hubot-xkcd": "0.0.4",
+    "hubot-youtube": "^1.0.2",
+    "jsdom": "^9.8.3",
+    "mathjs": "^3.6.0",
+    "optparse": "^1.0.5",
+    "qs": "^6.3.2",
+    "redis": "^2.6.5",
+    "soupselect": "^0.2.0",
+    "xml2js": "^0.4.19"
   },
   "engines": {
     "nodejs": "^6.8.0",
